force-app/main/default/objects/Asset/fields/AFE_No__c.field-meta.xml
<CustomField>
    <fullName>AFE_No__c</fullName>
    <description>CATM</description>
    <label>AFE #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>