force-app/main/default/objects/Asset/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>CATM</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Deposit Machine</fullName>
            </value>
            <value>
                <fullName>Recycler</fullName>
            </value>
            <value>
                <fullName>Sprintquip</fullName>
            </value>
            <value>
                <fullName>Pospoint</fullName>
            </value>
            <value>
                <fullName>WiFi Hotspot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>