force-app/main/default/objects/Asset/fields/ATM_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>ATM_Internal_ID__c</fullName>
    <description>CATM</description>
    <label>ATM Internal ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>