force-app/main/default/objects/Asset/fields/ATM_Type__c.field-meta.xml
<CustomField>
    <fullName>ATM_Type__c</fullName>
    <description>CATM</description>
    <label>ATM Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>TTW</fullName>
            </value>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>TOIS</fullName>
            </value>
            <value>
                <fullName>Cash Deposit (Back Office)</fullName>
            </value>
            <value>
                <fullName>Recycler</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>