force-app/main/default/objects/Asset/fields/Connected_Lanes__c.field-meta.xml
<CustomField>
    <fullName>Connected_Lanes__c</fullName>
    <label>Live Lanes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>