force-app/main/default/objects/Asset/fields/Date_Released_to_Ops__c.field-meta.xml
<CustomField>
    <fullName>Date_Released_to_Ops__c</fullName>
    <description>CATM</description>
    <label>Date Released to Ops</label>
    <type>Date</type>
</CustomField>