force-app/main/default/objects/Asset/fields/Equipment_Request__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CATM</description>
    <label>Equipment Request</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>