force-app/main/default/objects/Asset/fields/Is_Configurable_Flag__c.field-meta.xml
<CustomField>
    <fullName>Is_Configurable_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Configurable Flag</label>
    <type>Checkbox</type>
</CustomField>