force-app/main/default/objects/Asset/fields/Pending_Lanes_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Pending_Lanes_Backlog__c</fullName>
    <label>Pending Lanes (Backlog)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>