force-app/main/default/objects/Asset/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <externalId>true</externalId>
    <label>PID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>