force-app/main/default/objects/Asset/fields/PL_Decision_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>PL_Decision_Booked_Date__c</fullName>
    <label>PL Decision Booked Date</label>
    <type>Date</type>
</CustomField>