force-app/main/default/objects/Asset/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <label>Product Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>