force-app/main/default/objects/Asset/fields/Replen_Method__c.field-meta.xml
<CustomField>
    <fullName>Replen_Method__c</fullName>
    <description>CATM</description>
    <label>Replen Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIT</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>