force-app/main/default/objects/Asset/fields/RSIM_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>RSIM_Modified_Date__c</fullName>
    <label>RSIM Modified Date</label>
    <type>Date</type>
</CustomField>