force-app/main/default/objects/Asset/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>External Serial Number</description>
    <externalId>true</externalId>
    <label>Serial Number (Custom)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>