force-app/main/default/objects/Asset/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Number</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Site)</relationshipLabel>
    <relationshipName>Site_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>