force-app/main/default/objects/Asset/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>CATM</description>
    <label>State/Province</label>
    <length>18</length>
    <type>Text</type>
</CustomField>