force-app/main/default/objects/Asset/fields/Subscription_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Is this asset associated with any subscriptions</description>
    <inlineHelpText>Is this asset associated with any subscriptions?</inlineHelpText>
    <label>Subscription-Tracking</label>
    <referenceTo>Subscription_Tracking__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>