force-app/main/default/objects/Asset/fields/Terminal_ID__c.field-meta.xml
<CustomField>
    <fullName>Terminal_ID__c</fullName>
    <description>CATM</description>
    <label>Terminal ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>