force-app/main/default/objects/Asset/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>CATM</description>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>