force-app/main/default/objects/Asset/fields/Total_Lanes__c.field-meta.xml
<CustomField>
    <fullName>Total_Lanes__c</fullName>
    <formula>Unconnected_Lanes__c + Pending_Lanes_Backlog__c + Connected_Lanes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lanes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>