force-app/main/default/objects/Asset/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <description>CATM</description>
    <label>Work Order #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>