force-app/main/default/objects/Asset/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Part Only</fullName>
            </value>
            <value>
                <fullName>Tech Only</fullName>
            </value>
            <value>
                <fullName>Tech and Part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>