force-app/main/default/objects/Asset/fields/X1st_TXN_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_TXN_Date__c</fullName>
    <description>CATM</description>
    <label>1st TXN Date</label>
    <type>Date</type>
</CustomField>