force-app/main/default/objects/Asset/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <description>CATM</description>
    <label>Zip/Postal Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>