force-app/main/default/objects/Asset/recordTypes/CATM.recordType-meta.xml
<RecordType>
    <fullName>CATM</fullName>
    <active>true</active>
    <label>Cardtronics</label>
</RecordType>