force-app/main/default/objects/Asset/recordTypes/External_Vendor.recordType-meta.xml
<RecordType>
    <fullName>External_Vendor</fullName>
    <active>true</active>
    <label>External Vendor</label>
</RecordType>