force-app/main/default/objects/Asset/recordTypes/Platform_Lane.recordType-meta.xml
<RecordType>
    <fullName>Platform_Lane</fullName>
    <active>true</active>
    <label>Platform Lane</label>
</RecordType>