force-app/main/default/objects/Asset/recordTypes/Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Record_Type</fullName>
    <active>true</active>
    <description>Original NCR Equipment or Service</description>
    <label>NCR</label>
</RecordType>