force-app/main/default/objects/Asset/recordTypes/Serialized_Asset.recordType-meta.xml
<RecordType>
    <fullName>Serialized_Asset</fullName>
    <active>true</active>
    <label>Serialized Asset</label>
</RecordType>